2011-07-11  Jessie Berlin  <jberlin@apple.com>

        WebKitTestRunner needs an implementation of layoutTestController.setDefersLoading.
        https://bugs.webkit.org/show_bug.cgi?id=64313

        Add loader/load-defer-resume-crash.html to the WK2 Skipped list in order to get the bots
        green.

        * platform/wk2/Skipped:

2011-07-11  Yi Shen  <yi.4.shen@nokia.com>

        [Qt] ASSERTION FAILED in ResourceHandle::setDefersLoading causes crash
        https://bugs.webkit.org/show_bug.cgi?id=62808

        Added a test for the crash occurs when load deferring is turned off.

        Reviewed by Benjamin Poulain.

        * loader/load-defer-resume-crash-expected.txt: Added.
        * loader/load-defer-resume-crash.html: Added.
        * loader/resources/images.html: Added.
        * platform/chromium/test_expectations.txt: Skip this test since the LayoutTestController::setDefersLoading is not implemented for chromium.

2011-07-11  Stephen White  <senorblanco@chromium.org>

        Unreviewed; chromium test expectations update.

        Mark 2d.gradient.object.update as passing after r90767.

        * platform/chromium/test_expectations.txt:

2011-07-11  Young Han Lee  <joybro@company100.net>

        Reviewed by Simon Fraser.

        Transition LayoutTest using pause API shows wrong result if it tries to pause a transition after its delay time.
        https://bugs.webkit.org/show_bug.cgi?id=63859

        The existing code to set the m_startTime haven't worked because 
        the animation is not the right state to accept the start event. 
        This patch just sets the values directly instead of using event.

        * transitions/delay-expected.txt: Added.
        * transitions/delay.html: Added.

2011-07-11  Anders Carlsson  <andersca@apple.com>

        Implement getFormValue for WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=64294
        <rdar://problem/3964087>

        Remove now passing test.

        * platform/wk2/Skipped:
