@@ -1,6 +1,0 @@
-<html>
-<body>
-<img border="0" src="image1.png"/>
-<img border="0" src="image2.png"/>
-</body>
-</html>
