@@ -212,7 +212,6 @@ WONTFIX SKIP : animations/animation-api-1.html = FAIL
 
 // Unskip after implementing LayoutTestController::setDefersLoading and ::goBack.
 BUGWK60877 SKIP : loader/navigation-while-deferring-loads.html = FAIL
-BUGWK60877 SKIP : loader/load-defer-resume-crash.html = FAIL
 
 // Skipped until new WebSocket protocol is implemented.
 BUGWK50099 SKIP : http/tests/websocket/tests/hybi/ = PASS FAIL TIMEOUT
